# openrooms

./: AGENT.md  AGENTS_AS_APPS.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: agent.rs  lib.rs  room.rs  session.rs  topology.rs
tests/: integration.rs
