[package]
name = "openrooms"
version = "0.1.0"
edition = "2021"
description = "Agent-powered collaborative rooms with topology, intention fields, and Hodge decomposition"
license = "MIT"
repository = "https://github.com/SuperInstance/openrooms"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
